<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>de.evoila.cf.broker</groupId>
    <artifactId>repo-parent</artifactId>
    <version>1.2.0</version>
    <packaging>pom</packaging>
    <name>MongoDB</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.4</version>
    </parent>

    <modules>
        <module>osb-dashboard</module>
        <module>osb-core</module>
        <module>osb-persistence</module>
        <module>osb-deployment</module>
        <module>osb-service</module>
    </modules>

    <properties>
        <resource.dir>${basedir}/../osb-service/src/main/resources</resource.dir>
        <dashboard.module>mongodb</dashboard.module>
        <spring-cloud.version>2022.0.4</spring-cloud.version>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>5.7.1</version>
                <configuration>
                    <activeRecipes>
                        <recipe>org.openrewrite.java.apache.httpclient5.UpgradeApacheHttpClient_5</recipe>
                        <recipe>org.openrewrite.java.apache.httpclient5.StatusLine</recipe>
                        <recipe>org.openrewrite.java.apache.httpclient5.UpgradeApacheHttpClient_5_DeprecatedMethods</recipe>
                        <recipe>org.openrewrite.java.apache.httpclient5.UpgradeApacheHttpClient_5_ClassMapping</recipe>
                        <recipe>org.openrewrite.java.spring.cloud2022.UpgradeSpringCloud_2022</recipe>
                        <recipe>org.openrewrite.java.spring.framework.UpgradeSpringFramework_5_0</recipe>
                        <recipe>org.openrewrite.java.spring.framework.UpgradeSpringFramework_5_1</recipe>
                        <recipe>org.openrewrite.java.spring.framework.UpgradeSpringFramework_5_2</recipe>
                        <recipe>org.openrewrite.java.spring.framework.UpgradeSpringFramework_5_3</recipe>
                        <recipe>org.openrewrite.java.spring.data.UpgradeSpringData_2_3</recipe>
                        <recipe>org.openrewrite.java.spring.data.UpgradeSpringData_2_5</recipe>
                        <recipe>org.openrewrite.java.spring.framework.MigrateWebMvcConfigurerAdapter</recipe>
                        <recipe>org.openrewrite.java.spring.framework.MigrateHandlerInterceptor</recipe>
                        <recipe>org.openrewrite.java.spring.security6.UpgradeSpringSecurity_6_0</recipe>
                        <recipe>org.openrewrite.java.spring.security6.UpgradeSpringSecurity_6_1</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.SpringBootProperties_3_0</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.SpringBootProperties_3_1</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.SpringBatch4To5Migration</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.MigrateThymeleafDependencies</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_0</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_1</recipe>
                        <recipe>org.openrewrite.java.spring.security6.oauth2.client.OAuth2LoginLambdaDsl</recipe>
                        <recipe>org.openrewrite.java.spring.security6.oauth2.server.resource.OAuth2ResourceServerLambdaDsl</recipe>
                        <recipe>org.openrewrite.java.spring.security6.oauth2.client.OAuth2ClientLambdaDsl</recipe>
                    </activeRecipes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-spring</artifactId>
                        <version>5.0.10</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>
                            <arg>--add-exports</arg>
                            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.2</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>2.7.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-Xmx512m</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>Maven Central</id>
            <name>Central Maven Repository</name>
            <url>https://repo1.maven.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshot</id>
            <name>Spring Maven SNAPSHOT Repository</name>
            <url>https://repo.springsource.org/libs-snapshot</url>
        </repository>
        <repository>
            <id>spring-repository</id>
            <url>https://repo.spring.io/libs-release</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>Maven Central</id>
            <name>Central Maven Repository</name>
            <url>https://repo1.maven.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>spring-snapshots</id>
            <url>https://repo.spring.io/snapshot</url>
        </pluginRepository>
        <pluginRepository>
            <id>spring-milestones</id>
            <url>http://repo.spring.io/milestone</url>
        </pluginRepository>
    </pluginRepositories>
</project>
